src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void VideoCapture_Delete(void* self);
extern "C" __declspec(dllexport) void* VideoCapture_New_0();
extern "C" __declspec(dllexport) void* VideoCapture_New_1(const char* filename, int apiPreference);
extern "C" __declspec(dllexport) void* VideoCapture_New_2(const char* filename, int apiPreference, void* params);
extern "C" __declspec(dllexport) void* VideoCapture_New_3(int index, int apiPreference);
extern "C" __declspec(dllexport) void* VideoCapture_New_4(int index, int apiPreference, void* params);
extern "C" __declspec(dllexport) bool VideoCapture_open_0(void* self, const char* filename, int apiPreference);
extern "C" __declspec(dllexport) bool VideoCapture_open_1(void* self, const char* filename, int apiPreference, void* params);
extern "C" __declspec(dllexport) bool VideoCapture_open_2(void* self, int index, int apiPreference);
extern "C" __declspec(dllexport) bool VideoCapture_open_3(void* self, int index, int apiPreference, void* params);
extern "C" __declspec(dllexport) bool VideoCapture_isOpened_0(void* self);
extern "C" __declspec(dllexport) void VideoCapture_release_0(void* self);
extern "C" __declspec(dllexport) bool VideoCapture_grab_0(void* self);
extern "C" __declspec(dllexport) bool VideoCapture_retrieve_0(void* self, void* image, int flag);
extern "C" __declspec(dllexport) bool VideoCapture_read_0(void* self, void* image);
extern "C" __declspec(dllexport) bool VideoCapture_set_0(void* self, int propId, double value);
extern "C" __declspec(dllexport) double VideoCapture_get_0(void* self, int propId);
extern "C" __declspec(dllexport) const char* VideoCapture_getBackendName_0(void* self);
extern "C" __declspec(dllexport) void VideoCapture_setExceptionMode_0(void* self, bool enable);
extern "C" __declspec(dllexport) bool VideoCapture_getExceptionMode_0(void* self);
extern "C" __declspec(dllexport) bool VideoCapture_waitAny_0(void* streams, void* readyIndex, int64 timeoutNs);
extern "C" __declspec(dllexport) void VideoWriter_Delete(void* self);
extern "C" __declspec(dllexport) void* VideoWriter_New_0();
extern "C" __declspec(dllexport) void* VideoWriter_New_1(const char* filename, int fourcc, double fps, cv::Size frameSize, bool isColor);
extern "C" __declspec(dllexport) void* VideoWriter_New_2(const char* filename, int apiPreference, int fourcc, double fps, cv::Size frameSize, bool isColor);
extern "C" __declspec(dllexport) void* VideoWriter_New_3(const char* filename, int fourcc, double fps, cv::Size frameSize, void* params);
extern "C" __declspec(dllexport) void* VideoWriter_New_4(const char* filename, int apiPreference, int fourcc, double fps, cv::Size frameSize, void* params);
extern "C" __declspec(dllexport) bool VideoWriter_open_0(void* self, const char* filename, int fourcc, double fps, cv::Size frameSize, bool isColor);
extern "C" __declspec(dllexport) bool VideoWriter_open_1(void* self, const char* filename, int apiPreference, int fourcc, double fps, cv::Size frameSize, bool isColor);
extern "C" __declspec(dllexport) bool VideoWriter_open_2(void* self, const char* filename, int fourcc, double fps, cv::Size frameSize, void* params);
extern "C" __declspec(dllexport) bool VideoWriter_open_3(void* self, const char* filename, int apiPreference, int fourcc, double fps, cv::Size frameSize, void* params);
extern "C" __declspec(dllexport) bool VideoWriter_isOpened_0(void* self);
extern "C" __declspec(dllexport) void VideoWriter_release_0(void* self);
extern "C" __declspec(dllexport) bool VideoWriter_write_0(void* self, void* image);
extern "C" __declspec(dllexport) bool VideoWriter_set_0(void* self, int propId, double value);
extern "C" __declspec(dllexport) double VideoWriter_get_0(void* self, int propId);
extern "C" __declspec(dllexport) int VideoWriter_fourcc_0(char c1, char c2, char c3, char c4);
extern "C" __declspec(dllexport) const char* VideoWriter_getBackendName_0(void* self);
extern "C" __declspec(dllexport) const char* cv_videoio_registry_getBackendName_0(int api);
extern "C" __declspec(dllexport) void* cv_videoio_registry_getBackends_0();
extern "C" __declspec(dllexport) void* cv_videoio_registry_getCameraBackends_0();
extern "C" __declspec(dllexport) void* cv_videoio_registry_getStreamBackends_0();
extern "C" __declspec(dllexport) void* cv_videoio_registry_getStreamBufferedBackends_0();
extern "C" __declspec(dllexport) void* cv_videoio_registry_getWriterBackends_0();
extern "C" __declspec(dllexport) bool cv_videoio_registry_hasBackend_0(int api);
extern "C" __declspec(dllexport) bool cv_videoio_registry_isBackendBuiltIn_0(int api);
extern "C" __declspec(dllexport) const char* cv_videoio_registry_getCameraBackendPluginVersion_0(int api, int version_ABI, int version_API);
extern "C" __declspec(dllexport) const char* cv_videoio_registry_getStreamBackendPluginVersion_0(int api, int version_ABI, int version_API);
extern "C" __declspec(dllexport) const char* cv_videoio_registry_getStreamBufferedBackendPluginVersion_0(int api, int version_ABI, int version_API);
extern "C" __declspec(dllexport) const char* cv_videoio_registry_getWriterBackendPluginVersion_0(int api, int version_ABI, int version_API);