src/OpenCV5Sharp/Generated/NativeMethods.VideoIO.cs

// Copyright (c) 2026 Qourex. Licensed under Apache-2.0.
// See LICENSE file in the project root for full license information.
// AUTO-GENERATED FILE — DO NOT EDIT MANUALLY. Generated by generator.py.

using System;
using System.Runtime.InteropServices;

namespace OpenCV5Sharp
{
    internal static partial class NativeMethods
    {
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VideoCapture_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_New_2([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_New_3(int index, int apiPreference);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_New_4(int index, int apiPreference, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_open_0(VideoCaptureHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_open_1(VideoCaptureHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_open_2(VideoCaptureHandle self, int index, int apiPreference);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_open_3(VideoCaptureHandle self, int index, int apiPreference, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_isOpened_0(VideoCaptureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VideoCapture_release_0(VideoCaptureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_grab_0(VideoCaptureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_retrieve_0(VideoCaptureHandle self, MatHandle image, int flag);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_read_0(VideoCaptureHandle self, MatHandle image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_set_0(VideoCaptureHandle self, int propId, double value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double VideoCapture_get_0(VideoCaptureHandle self, int propId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoCapture_getBackendName_0(VideoCaptureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VideoCapture_setExceptionMode_0(VideoCaptureHandle self, [MarshalAs(UnmanagedType.U1)] bool enable);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_getExceptionMode_0(VideoCaptureHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoCapture_waitAny_0(IntPtr streams, IntPtr readyIndex, long timeoutNs);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VideoWriter_Delete(IntPtr self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_New_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_New_1([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int fourcc, double fps, Size frameSize, [MarshalAs(UnmanagedType.U1)] bool isColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_New_2([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, int fourcc, double fps, Size frameSize, [MarshalAs(UnmanagedType.U1)] bool isColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_New_3([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int fourcc, double fps, Size frameSize, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_New_4([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, int fourcc, double fps, Size frameSize, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_open_0(VideoWriterHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int fourcc, double fps, Size frameSize, [MarshalAs(UnmanagedType.U1)] bool isColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_open_1(VideoWriterHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, int fourcc, double fps, Size frameSize, [MarshalAs(UnmanagedType.U1)] bool isColor);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_open_2(VideoWriterHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int fourcc, double fps, Size frameSize, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_open_3(VideoWriterHandle self, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, int apiPreference, int fourcc, double fps, Size frameSize, IntPtr @params);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_isOpened_0(VideoWriterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void VideoWriter_release_0(VideoWriterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_write_0(VideoWriterHandle self, MatHandle image);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool VideoWriter_set_0(VideoWriterHandle self, int propId, double value);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern double VideoWriter_get_0(VideoWriterHandle self, int propId);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern int VideoWriter_fourcc_0(byte c1, byte c2, byte c3, byte c4);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr VideoWriter_getBackendName_0(VideoWriterHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getBackendName_0(int api);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getBackends_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getCameraBackends_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getStreamBackends_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getStreamBufferedBackends_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getWriterBackends_0();
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_videoio_registry_hasBackend_0(int api);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool cv_videoio_registry_isBackendBuiltIn_0(int api);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getCameraBackendPluginVersion_0(int api, int version_ABI, int version_API);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getStreamBackendPluginVersion_0(int api, int version_ABI, int version_API);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getStreamBufferedBackendPluginVersion_0(int api, int version_ABI, int version_API);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr cv_videoio_registry_getWriterBackendPluginVersion_0(int api, int version_ABI, int version_API);
    }
}
